--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -19,7 +19,7 @@ node_modules/
 .env
 .env.production
 .dev.vars
-wrangler.toml
+
 
 # logs
 logs/
@@ -32,3 +32,4 @@ lerna-debug.log*
 
 # misc
 .DS_Store
+wrangler.toml/
