--- a/common/package.json
+++ b/common/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ajaytumulaa/medium-common",
-  "version": "1.0.0",
+  "version": "3.0.2",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/zod.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
