--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ajaytumulaa/medium-common": "^3.0.2",
     "@types/node": "^22.7.3",
+    "axios": "^1.7.7",
     "jsx-runtime": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
