--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ajaytumulaa/common-app": "^1.0.4",
     "@ajaytumulaa/medium-common": "^3.0.2",
     "@types/node": "^22.7.3",
     "axios": "^1.7.7",
