--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@ajaytumulaa/medium-common": "^3.0.2",
     "@types/node": "^22.7.3",
     "axios": "^1.7.7",
+    "babel-polyfill": "^6.26.0",
+    "draft-js": "^0.11.7",
     "jsx-runtime": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
